--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,57 @@
-.main-section{
-    color: blue;
+:root{
+    --color-primary-dark:#31261a;
+    --color-primary-light:#faf4fa;
+    --color-brand-light:#819b57;
+    --color-brand-dark: #465929;
+}
+
+/* Base */
+body{
+    color:var(--color-primary-dark);
+}
+
+ul {
+    list-style-type: none; 
+}
+
+/* Button */
+.button {
+    color: var(--color-primary-light);
+    background-color: var(--color-brand-light);
+    border:2px solid var(--color-brand-light) ;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+.button:hover {
+    color: var(--color-primary-dark);
+    background-color: transparent;
+}
+
+/* Link */
+.link {
+color: var(--color-primary-light);
+}
+
+.link:hover {
+    color: var(--color-brand-light);
+}
+
+/* Hero section */
+.hero-tittle{
+    color: var(--color-primary-light);
+}
+
+.hero-tittle .accent {
+    color: var(--color-brand-light) ;
+}
+
+/* Advantages section */
+.advantages-list {
+    color: var(--color-primary-light);
+    background-color:var(--color-brand-light);
+}
+
+.section-tittle .accent {
+    color:var(--color-brand-dark);
 }
